// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuidanceLinksTest linkComponentType is defined as ExternalLink 1`] = `
<DocumentFragment>
  <span
    class="guidance-links"
  >
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url1"
        target="_blank"
      >
        TEXT1
      </a>
      <div
        hidden=""
        id="tooltip5"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is empty 1`] = `<DocumentFragment />`;

exports[`GuidanceLinksTest links is not null and correct with best practice and regular links (excludes BEST PRACTICE) 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url1"
        target="_blank"
      >
        TEXT1
      </a>
      <div
        hidden=""
        id="tooltip3"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
    <span>
      , 
    </span>
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url2"
        target="_blank"
      >
        TEXT2
      </a>
      <div
        hidden=""
        id="tooltip4"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with one best practice link 1`] = `
<DocumentFragment>
  <span
    class="className"
  />
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with one regular link 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url1"
        target="_blank"
      >
        TEXT1
      </a>
      <div
        hidden=""
        id="tooltip0"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is not null and correct with two regular links 1`] = `
<DocumentFragment>
  <span
    class="className"
  >
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url1"
        target="_blank"
      >
        TEXT1
      </a>
      <div
        hidden=""
        id="tooltip1"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
    <span>
      , 
    </span>
    <div
      class="ms-TooltipHost insightsTooltipHost root-109"
      role="none"
    >
      <a
        class="ms-Link insights-link insightsLink root-110"
        href="https://url2"
        target="_blank"
      >
        TEXT2
      </a>
      <div
        hidden=""
        id="tooltip2"
        style="position: absolute; width: 1px; height: 1px; margin: -1px; padding: 0px; border: 0px; overflow: hidden; white-space: nowrap;"
      />
    </div>
  </span>
</DocumentFragment>
`;

exports[`GuidanceLinksTest links is null 1`] = `<DocumentFragment />`;
